# claude-usage-meter

./: .gitignore  README.md  THIRD_PARTY.md  pyproject.toml
src/claude_usage_meter/: activity.py  launcher.py  paths.py  poller.py  sprite.py  widget.py
